[project]
name = "img2webp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "radon>=6.0.1",
    "ruff>=0.15.4",
]

[tool.ruff]
# Установка длины строки
line-length = 120

# Исключение файлов и папок
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Целевая версия Python
target-version = "py312"

[tool.ruff.lint]
# Включение групп правил — https://docs.astral.sh/ruff/rules/
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "RUF", # ruff-specific rules
    "SIM", # lake8-simplify
]

# Игнорирование определенных правил
ignore = [
    "RUF001", # кириллица вместо англ символов
    "RUF002", # кириллица вместо англ символов
    "RUF003", # кириллица вместо англ символов
]

# Разрешение автоисправления для определенных правил
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Использование двойных кавычек
quote-style = "double"

# Отступы в 4 пробела (по умолчанию)
indent-style = "space"

# Сохранение магических запятых
skip-magic-trailing-comma = false
